--- a/minimax.html
+++ b/minimax.html
@@ -68,40 +68,42 @@
 						<div class="inner">
 
 							<!-- Menu -->
-							<nav id="menu">
-								<header class="major">
-									<h2>Menu</h2>
-								</header>
-								<ul>
-									<li><a href="index.html">Homepage</a></li>
-									<li><a href="installation.html">Installation</a></li>
-									<li><a href="datatypes.html">Datatypes</a></li>
-									<li><a href="variables.html">Functions & Variables</a></li>
-									<li><a href="conditionals.html">Conditionals</a></li>
-									<li><a href="loops.html">Loops</a></li>
-									<li><a href="strings.html">Strings</a></li>
-									<li><a href="lists.html">Lists</a></li>
-									<li><a href="dictionary.html">Dictionary</a></li>
-									<li><a href="oopy.html">Object Oriented Programming</a></li>
-									<li><a href="graphics.html">Graphics</a></li>
-									<li><a href="minimax.html">AI - minimax</a></li>
-									<li><a href="abpruning.html">AI - ab pruning</a></li>
-								</ul>
-							</nav>
+								<nav id="menu">
+									<header class="major">
+										<h2>Menu</h2>
+									</header>
+									<ul>
+                                        <li><a href="index.html">Homepage</a></li>
+                                        <li><a href="installation.html">Installation</a></li>
+                                        <li><a href="variables.html">Variables</a></li>
+										<li><a href="datatypes.html">Datatypes</a></li>
+                                        <li><a href="functions.html">Functions</a></li>
+                                        <li><a href="conditionals.html">Conditionals</a></li>
+                                        <li><a href="strings.html">Strings</a></li>
+                                        <li><a href="loops.html">Loops</a></li>
+                                        <li><a href="lists.html">Lists</a></li>
+                                        <li><a href="dictionary.html">Dictionary</a></li>
+                                        <li><a href="oopy.html">Object Oriented Programming</a></li>
+                                        <li><a href="graphics.html">Graphics</a></li>
+                                        <li><a href="minimax.html">AI - minimax</a></li>
+										<li><a href="abpruning.html">AI - ab pruning</a></li>
+										<li><a href="exercises.html">Exercises</a></li>
+									</ul>
+								</nav>
 
-						<!-- Section -->
-							<section>
-								<header class="major">
-									<h2>Get in touch</h2>
-								</header>
-								<p>Contact us with questions through wechat or emails!</p>
-								<ul class="contact">
-									<li class="icon solid fa-envelope"><a href="#">jessec1@andrew.cmu.edu</a></li>
-									<li class="icon solid fa-comment-alt">jzchan34</li>
-									<li class="icon solid fa-envelope"><a href="#">jerryl@andrew.cmu.edu</a></li>
-									<li class="icon solid fa-comment-alt">traumatizedpanda</li>
-								</ul>
-							</section>
+							<!-- Section -->
+								<section>
+									<header class="major">
+										<h2>Get in touch</h2>
+									</header>
+									<p>Contact us with questions through wechat or emails!</p>
+									<ul class="contact">
+										<li class="icon solid fa-envelope"><a href="#">jessec1@andrew.cmu.edu</a></li>
+										<li class="icon solid fa-weixin">WeChatId: jzchan34</li>
+										<li class="icon solid fa-envelope"><a href="#">jerryl@andrew.cmu.edu</a></li>
+										<li class="icon solid fa-weixin">WeChatId: traumatizedpanda</li>
+									</ul>
+								</section>
 						</div>
 					</div>
 
