--- a/abpruning.html
+++ b/abpruning.html
@@ -63,7 +63,7 @@
 				<!-- Sidebar -->
                 <div id="sidebar">
 						<div class="inner">
-							
+
 							<!-- Menu -->
 								<nav id="menu">
 									<header class="major">
@@ -98,7 +98,7 @@
 										<li class="icon solid fa-envelope"><a href="#">jessec1@andrew.cmu.edu</a></li>
 										<li class="icon solid fa-weixin">WeChatId: jzchan34</li>
 										<li class="icon solid fa-envelope"><a href="#">jerryl@andrew.cmu.edu</a></li>
-										<li class="icon solid fa-weixin">WeChatId: traumatizedpanda</li>
+										<li class="icon solid fa-weixin">WeChatId: traumatizedpanda</li>i class="icon solid fa-weixin">traumatized something</li>
 									</ul>
 								</section>
 						</div>
