--- a/dictionary.html
+++ b/dictionary.html
@@ -180,7 +180,8 @@ print(appearances(L))
                                         <li><a href="oopy.html">Object Oriented Programming</a></li>
                                         <li><a href="graphics.html">Graphics</a></li>
                                         <li><a href="minimax.html">AI - minimax</a></li>
-                                        <li><a href="abpruning.html">AI - ab pruning</a></li>
+										<li><a href="abpruning.html">AI - ab pruning</a></li>
+										<li><a href="exercises.html">Exercises</a></li>
 									</ul>
 								</nav>
 
@@ -192,9 +193,9 @@ print(appearances(L))
 									<p>Contact us with questions through wechat or emails!</p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">jessec1@andrew.cmu.edu</a></li>
-										<li class="icon solid fa-comment-alt">WeChatId: jzchan34</li>
+										<li class="icon solid fa-weixin">WeChatId: jzchan34</li>
 										<li class="icon solid fa-envelope"><a href="#">jerryl@andrew.cmu.edu</a></li>
-										<li class="icon solid fa-comment-alt">WeChatId: traumatizedpanda</li>
+										<li class="icon solid fa-weixin">WeChatId: traumatizedpanda</li>
 									</ul>
 								</section>
 						</div>
