--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE HTML>
+<!--
+	Editorial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
 		<title>Python Notes</title>
@@ -26,17 +31,6 @@
 										<header>
 											<h1>Python Programming Notes</h1>
 										</header>
-										<h3>June 9 2020</h3>
-										<p>
-											Hi all,
-Thank you for your support of our Python tutoring course that we posted about last week! Now, we’d like to introduce you to our new website! This website contains supplemental materials for the course, including course notes and worked examples. In our experience teaching introductory level CS courses in university, it can be difficult for students to learn programming concepts/syntax immediately, and especially more so in a fast-paced environment—this is our solution to assist students and reinforce their learning. You can access it at https://learnpyprogram.github.io
-
-The website currently include concepts from parts of Week 1 of the course as well as a sample project lecture on Optical Character Recognition (OCR), which will be free to use in perpetuity. Even if you don’t decide to register for our course, we hope that you’ll at least take away a basic understanding of Python syntax and its many potential applications! Registered students will receive access to the full site before the class begins.
-
-[About the course]
-Based on Project-Based Learning (PBL)—a widely popular model due to its effectiveness and enjoyability—this 4-week course will include substantial work outside of lecture times, and we are committed to guiding you through these projects with detailed write-ups and constant support.
-										</p>
-										<h3>June 2 2020</h3>
 										<p>
 											Learning how to program is becoming increasingly important in a rapidly digitalizing world. 
 											Starting Jun. 20th, Jesse and Jerry, two SAS '18 alumni and current students at Carnegie Mellon University, 
@@ -71,7 +65,7 @@ Based on Project-Based Learning (PBL)—a widely popular model due to its effect
 											Our actual classes will be much less brutal and much more interactive.
 										</p>
 										<p>We hope to see you in class soon!</p>
-										<video controls width="700, initial-scale=1, user-scalable=no">
+										<video controls width="device-width, initial-scale=1, user-scalable=no">
 									
 											<source src="OCR Video.mp4"
 													type="video/mp4">
@@ -88,41 +82,74 @@ Based on Project-Based Learning (PBL)—a widely popular model due to its effect
 					<div id="sidebar">
 						<div class="inner">
 
-							<!-- Menu -->
-							<nav id="menu">
-								<header class="major">
-									<h2>Menu</h2>
-								</header>
-								<ul>
-									<li><a href="index.html">Homepage</a></li>
-									<li><a href="installation.html">Installation</a></li>
-									<li><a href="datatypes.html">Datatypes</a></li>
-									<li><a href="variables.html">Functions & Variables</a></li>
-									<li><a href="conditionals.html">Conditionals</a></li>
-									<li><a href="loops.html">Loops</a></li>
-									<li><a href="strings.html">Strings</a></li>
-									<li><a href="lists.html">Lists</a></li>
-									<li><a href="dictionary.html">Dictionary</a></li>
-									<li><a href="oopy.html">Object Oriented Programming</a></li>
-									<li><a href="graphics.html">Graphics</a></li>
-									<li><a href="minimax.html">AI - minimax</a></li>
-									<li><a href="abpruning.html">AI - ab pruning</a></li>
-								</ul>
-							</nav>
+							<!-- Search -->
+								<section id="search" class="alt">
+									<form method="post" action="#">
+										<input type="text" name="query" id="query" placeholder="Search" />
+									</form>
+								</section>
 
-						<!-- Section -->
-							<section>
-								<header class="major">
-									<h2>Get in touch</h2>
-								</header>
-								<p>Contact us with questions through wechat or emails!</p>
-								<ul class="contact">
-									<li class="icon solid fa-envelope"><a href="#">jessec1@andrew.cmu.edu</a></li>
-									<li class="icon solid fa-comment-alt">jzchan34</li>
-									<li class="icon solid fa-envelope"><a href="#">jerryl@andrew.cmu.edu</a></li>
-									<li class="icon solid fa-comment-alt">traumatizedpanda</li>
-								</ul>
-							</section>
+							<!-- Menu -->
+								<nav id="menu">
+									<header class="major">
+										<h2>Menu</h2>
+									</header>
+									<ul>
+										<li><a href="index.html">Homepage</a></li>
+										<li><a href="installation.html">Installation</a></li>
+										<li><a href="variables.html">Variables</a></li>
+										<li><a href="datatypes.html">Datatypes</a></li>
+										<li><a href="functions.html">Functions</a></li>
+										<li><a href="conditionals.html">Conditionals</a></li>
+										<li><a href="strings.html">Strings</a></li>
+										<li><a href="loops.html">Loops</a></li>
+										<li><a href="lists.html">Lists</a></li>
+										<li><a href="dictionary.html">Dictionary</a></li>
+										<li><a href="oopy.html">Object Oriented Programming</a></li>
+										<li><a href="graphics.html">Graphics</a></li>
+										<li><a href="minimax.html">AI - minimax</a></li>
+										<li><a href="minimax.html">AI - ab pruning</a></li>
+										<li><a href="exercises.html">Exercises</a></li>
+	
+										<li>
+											<span class="opener">Submenu</span>
+											<ul>
+												<li><a href="#">Lorem Dolor</a></li>
+												<li><a href="#">Ipsum Adipiscing</a></li>
+												<li><a href="#">Tempus Magna</a></li>
+												<li><a href="#">Feugiat Veroeros</a></li>
+											</ul>
+										</li>
+										<li><a href="#">Etiam Dolore</a></li>
+										<li><a href="#">Adipiscing</a></li>
+										<li>
+											<span class="opener">Another Submenu</span>
+											<ul>
+												<li><a href="#">Lorem Dolor</a></li>
+												<li><a href="#">Ipsum Adipiscing</a></li>
+												<li><a href="#">Tempus Magna</a></li>
+												<li><a href="#">Feugiat Veroeros</a></li>
+											</ul>
+										</li>
+										<li><a href="#">Maximus Erat</a></li>
+										<li><a href="#">Sapien Mauris</a></li>
+										<li><a href="#">Amet Lacinia</a></li>
+									</ul>
+								</nav>
+
+							<!-- Section -->
+								<section>
+									<header class="major">
+										<h2>Get in touch</h2>
+									</header>
+									<p>Contact us with questions through wechat or emails!</p>
+									<ul class="contact">
+										<li class="icon solid fa-envelope"><a href="#">jessec1@andrew.cmu.edu</a></li>
+										<li class="icon solid fa-weixin">jzchan34</li>
+										<li class="icon solid fa-envelope"><a href="#">jerryl@andrew.cmu.edu</a></li>
+										<li class="icon solid fa-weixin">traumatizedpanda</li>
+									</ul>
+								</section>
 						</div>
 					</div>
 
