--- a/dictionary.html
+++ b/dictionary.html
@@ -168,19 +168,18 @@ print(appearances(L))
 									</header>
 									<ul>
                                         <li><a href="index.html">Homepage</a></li>
-                                        <li><a href="installation.html">Installation</a></li>
-                                        <li><a href="variables.html">Variables</a></li>
+										<li><a href="installation.html">Installation</a></li>
 										<li><a href="datatypes.html">Datatypes</a></li>
-                                        <li><a href="functions.html">Functions</a></li>
-                                        <li><a href="conditionals.html">Conditionals</a></li>
-                                        <li><a href="strings.html">Strings</a></li>
-                                        <li><a href="loops.html">Loops</a></li>
-                                        <li><a href="lists.html">Lists</a></li>
-                                        <li><a href="dictionary.html">Dictionary</a></li>
-                                        <li><a href="oopy.html">Object Oriented Programming</a></li>
-                                        <li><a href="graphics.html">Graphics</a></li>
-                                        <li><a href="minimax.html">AI - minimax</a></li>
-                                        <li><a href="abpruning.html">AI - ab pruning</a></li>
+										<li><a href="variables.html">Functions & Variables</a></li>
+										<li><a href="conditionals.html">Conditionals</a></li>
+										<li><a href="loops.html">Loops</a></li>
+										<li><a href="strings.html">Strings</a></li>
+										<li><a href="lists.html">Lists</a></li>
+										<li><a href="dictionary.html">Dictionary</a></li>
+										<li><a href="oopy.html">Object Oriented Programming</a></li>
+										<li><a href="graphics.html">Graphics</a></li>
+										<li><a href="minimax.html">AI - minimax</a></li>
+										<li><a href="abpruning.html">AI - ab pruning</a></li>
 									</ul>
 								</nav>
 
